<resources>
    <string name="app_name">ISF Sustainability</string>
    <string name="txt_please_wait">Please wait…</string>
    <string name="txt_network_error">Please check your internet connection</string>
    <string name="txt_sustainability">Sustainability App</string>
    <string name="txt_login_student_id">Login with ISF ID</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_powerd_by">Powered by</string>
    <string name="txt_validate_student_id">Please enter student id</string>
    <string name="txt_validate_password">Please enter your password</string>
    <string name="txt_enter_student_id">Enter ISF ID</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_login">Login</string>
    <string name="txt_cancel_btn">Cancel</string>
    <string name="txt_home">Energy</string>
    <string name="txt_challenge">Challenges</string>
    <string name="txt_rewards">Rewards</string>
    <string name="txt_profile">Profile</string>
    <string name="dialog_btn_no">No</string>
    <string name="dialog_message_exit">Are you sure you want to exit?</string>
    <string name="dialog_message_decline_friend_request">Are you sure you want to decline friend request?</string>
    <string name="dialog_message_delete_friend">Are you sure you want to remove this friend?</string>
    <string name="app_restriction_message">You can\'t use app between 8 AM to 4 PM.</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="txt_menu">Menu</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="txt_real_time">ISF 3D school map</string>
    <string name="txt_about_isf">ISF School App</string>
    <string name="txt_slider_faq">FAQ</string>
    <string name="txt_app_glossary">App Glossary</string>
    <string name="txt_terms_condition">Terms &amp; Conditions</string>
    <string name="txt_app_version">App Version v</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_house_a">House A</string>
    <string name="txt_energy_saving">Energy usage</string>
    <string name="txt_consumption">Your energy consumption</string>
    <string name="txt_this_month">Today</string>
    <string name="txt_this_compare">Compared to the same time last cycle</string>
    <string name="txt_school_energy_saving_txt">Total energy used in school</string>
    <string name="txt_date_upto">Up to 31 may 2017</string>
    <string name="txt_up_to">Up to </string>
    <string name="txt_last_updated">Last updated:-</string>
    <string name="txt_how_much_saved">Check out your carbon footprint</string>
    <string name="how_much_i_saved">How much I used</string>
    <string name="carbon_footprint">Carbon footprint</string>
    <string name="consumption_of">Emissions</string>
    <string name="this_week">Today</string>
    <string name="kwh">kWh</string>
    <string name="trees">Tree</string>
    <string name="hot_choklate">Hot Chocolate</string>
    <string name="cost_hk">costs \n HK$</string>
    <string name="turn_off_your_a_c_when_you_re_not_in_classroom">Turn off your A/C when you\'re not in Classroom</string>
    <string name="how_to_save_more_money">how to save more money ?</string>
    <string name="txt_tips">Smart tips</string>
    <string name="select_other_goods">select other goods</string>
    <string name="which_equals_to">Which equals to</string>
    <string name="for_comparision">for comparison</string>
    <string name="select_other_item">Select other item</string>
    <string name="which_wastes">You need to plant</string>
    <string name="dashboard">Leaderboard</string>
    <string name="friend">Friend</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_saved">Saved</string>
    <string name="txt_conumption_target">Your energy consumption</string>
    <string name="txt_compared_to">Compared to the school average</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, non congue eros in eget mauris mattis, quam nulla. Orci non id diam accumsan mi, est amet provident nulla elementum quis torquent.</string>
    <string name="dummy_text_answer">Lorem ipsum dolor sit amet, non congue eros in eget mauris mattis, quam nulla.</string>
    <string name="txt_zero_percent">0%</string>
    <string name="txt_zero_kwh">0 kWh</string>
    <string name="txt_dash_zero_kwh"> /0 kWh</string>
    <string name="txt_zero">0</string>
    <string name="txt_kg">kg</string>
    <string name="txt_x_zero">X0</string>
    <string name="txt_twenty_percent">20%</string>
    <string name="txt_x">x</string>
    <string name="txt_compariosn_yesterday">Compared to the same time yesterday</string>
    <string name="txt_compariosn_last_cylce">Compared to the same time last cycle</string>
    <string name="txt_compariosn_last_month">Compared to the same time last month</string>
    <string name="txt_details_carbon_foot_print">to balance out the carbon dioxide you produced.</string>
    <string name="txt_green_scale_text_today">Today</string>
    <string name="txt_grey_scale_text_today">Yesterday</string>
    <string name="txt_green_scale_text_cycle">This Cycle</string>
    <string name="txt_grey_scale_text_cycle">Last Cycle</string>
    <string name="txt_green_scale_text_month">This Month</string>
    <string name="txt_grey_scale_text_month">Last Month</string>
    <string name="txt_compariosn_month">Compared to same time last month</string>
    <string name="txt_top_ranked">You ranked 7 out of the whole school in may.</string>
    <string name="txt_gift">Here is your Gift!</string>
    <string name="txt_a_cup_of_free_drink">Free Drink Under from EDU Cafe.</string>
    <string name="txt_reward_text">Congratulations! You\'re one of the top 5 students in your house.</string>
    <string name="txt_no_reward_text">Let\'s take a look at what you\'ve won so far</string>
    <string name="txt_unlock">Unlock</string>
    <string name="txt_redeemed_message">Coupon redeemed successfully!</string>
    <string name="txt_flag_redeemed">Redeemed</string>
    <string name="txt_close">Close</string>
    <string name="txt_reddem">Redeem</string>
    <string name="txt_staff_use_only">(Staff use only)</string>
    <string name="txt_expires_in">Expires in </string>
    <string name="txt_invalid_staff">Staff code entered is invalid</string>
    <string name="txt_voucher_invalid">This voucher is invalid</string>
    <string name="txt_redeem_successfully">Reward redeemed successfully</string>
    <string name="txt_please_enter_staff_code">Please ask the staff to enter their code to redeem reward</string>
    <string name="txt_please_genrate_token">Genrate token before redeem reward</string>
    <string name="txt_search">Search</string>
    <string name="txt_daily_challange">It\'s time for your daily challenge!"</string>
    <string name="txt_quize_reminder">This is a reminder for your daily challenge</string>
    <string name="txt_friend_request_header">Friend Request</string>
    <string name="txt_all_friends">Friends (</string>
    <string name="txt_see_all">See all (</string>
    <string name="txt_see_min">See less</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_declined">Decline</string>
    <string name="txt_remove">Remove</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="txt_invite_your_friend">Invite more friends via email</string>
    <string name="txt_send_to">send_to</string>
    <string name="txt_send_friend_req">Invite a friend</string>
    <string name="txt_connect_as_friend">Let\'s connect as friends on the ISF Sustainability app.</string>
    <string name="txt_hey_this">Hey,this is</string>
    <string name="txt_email_addrress">Email address</string>
    <string name="txt_hint_email_content"> Hi(aakash sharma),this is ashish sending you a friend request.</string>
    <string name="txt_Send_btn">Send</string>
    <string name="txt_share_app_link_for_download">Share app link to friend for download</string>
    <string name="txt_no_friend_available">Please check the email address is correct. Only friends who have logged into the app with an ISF email address can be added. \n</string>
    <string name="txt_hello">Hello this is</string>
    <string name="txt_sending_app_link">sending app link to download so i can add you as a friend \n </string>
    <string name="txt_download_app_link">Would you like to share download link to friend?</string>
    <string name="txt_next_line">\n</string>
    <string name="just_now">Just now</string>
    <string name="a_min_ago">1 minute ago</string>
    <string name="mins_ago">" minutes ago"</string>
    <string name="a_hour_ago">1 hour ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">" days ago"</string>
    <string name="week_ago">" week ago"</string>
    <string name="weeks_ago">" weeks ago"</string>
    <string name="points_history">Points History</string>
    <string name="profile_date">Date</string>
    <string name="profile_points">Points</string>
    <string name="profile_you_have_saved_user">% less energy consumed (personal)</string>
    <string name="profile_you_have_saved_building">% less energy consumed (school building)</string>
    <string name="badge_text">Badges</string>
    <string name="txt_no_badges_alloted">No unlocked badges</string>
    <string name="txt_shared_daily_result">You\'ve shared your daily quiz results (max. 5 times)</string>
    <string name="txt_correct_answers">correct answers</string>
    <string name="txt_correct_answer_if_less_then_one">correct answer</string>
    <string name="txt_points_in_your_daily_quiz">Daily quiz is completed with</string>
    <string name="txt_pts">pts.</string>
    <string name="txt_no_badge_list">No badges alloted yet</string>
    <string name="txt_dash">--</string>
    <string name="txt_earned">I earned</string>
    <string name="txt_points_earned">points in the ISF Sustainability Quiz</string>
    <string name="txt_points_earned_zero_one">point in the ISF Sustainability Quiz</string>
    <string name="txt_daily">daily</string>
    <string name="txt_cycle_small">cycle</string>
    <string name="txt_monthly_small">monthly</string>
    <string name="txt_month_graph">month</string>
    <string name="txt_today">Today</string>
    <string name="txt_cycle">This Cycle</string>
    <string name="txt_monthly">This Month</string>
    <string name="txt_try_again">Something went wrong,please refresh again.</string>
    <string name="txt_next">Next</string>
    <string name="txt_check">Check</string>
    <string name="txt_no_records_found">no records found</string>
    <string name="txt_one">The world is counting on you!!!!!</string>
    <string name="txt_two">Really? You\'re gonna leave the air con on?</string>
    <string name="txt_three">Why you leave light on eh?!</string>
    <string name="txt_four">The AC is cooler than you!</string>
    <string name="txt_five">Save Energy!!</string>
    <string name="txt_six">Remember to switch off your lights when you are not using them.</string>
    <string name="title_badge_energy_saving">Energy Guardian</string>
    <string name="txt_badge_energy_saving_description">Way to go! You\'ve helped to reduce energy consumption around your school.</string>
    <string name="title_badge_quizholic">Quizzaholic</string>
    <string name="txt_badge_quizholic_description">Great work, brainbox. You\'re a champion at completing daily quizzes.</string>
    <string name="title_badge_persistent">Quiz Commander</string>
    <string name="txt_badge_persistent_description">You\'re on a roll! You continuously complete daily quizzes like clockwork.</string>
    <string name="title_badge_perfection">Planet Protector</string>
</resources>