<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_bg_color"
    android:clickable="true"
    android:orientation="vertical"
    tools:ignore="Overdraw">


    <RelativeLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">
        <com.gdc.isfacademy.view.customs.customfonts.OpenSansLightTextview
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp"
            android:layout_toLeftOf="@+id/cancelDrawer"
            android:text="@string/txt_menu"
            android:id="@+id/menu_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:id="@+id/cancelDrawer"
            android:layout_alignParentRight="true"
            android:src="@drawable/cross"
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            tools:ignore="ContentDescription,RtlHardcoded" />

    </RelativeLayout>




    <android.support.v7.widget.RecyclerView
        android:id="@+id/slide_menu_recylerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_layout"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp">

    </android.support.v7.widget.RecyclerView>


<LinearLayout
    android:layout_marginLeft="@dimen/_12sdp"
    android:layout_marginBottom="@dimen/_30sdp"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:id="@+id/tandc_privacy_policy_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.gdc.isfacademy.view.customs.customfonts.OpenSansRegularTextView
        android:layout_width="wrap_content"
        android:id="@+id/appVersion"
        android:padding="@dimen/_3sdp"
        android:textColor="@color/white_alpha"
        android:text="@string/txt_app_version"
        android:textSize="@dimen/_10sdp"
        android:layout_height="wrap_content" />


    <com.gdc.isfacademy.view.customs.customfonts.OpenSansItallicTextView
        android:layout_width="wrap_content"
        android:id="@+id/termsCondition"
        android:background="@drawable/terms_condition_and_privacy_selector"
        android:clickable="true"
        android:padding="@dimen/_3sdp"
        android:textColor="@color/white"
        android:text="@string/txt_terms_condition"
        android:textSize="@dimen/_10sdp"
        android:layout_height="wrap_content" />
    <com.gdc.isfacademy.view.customs.customfonts.OpenSansItallicTextView
        android:layout_width="wrap_content"
        android:clickable="true"
        android:id="@+id/privacyPolicy"
        android:background="@drawable/terms_condition_and_privacy_selector"
        android:padding="@dimen/_3sdp"
        android:textColor="@color/white"
        android:text="@string/txt_privacy_policy"
        android:textSize="@dimen/_10sdp"
        android:layout_height="wrap_content" />
    <com.gdc.isfacademy.view.customs.customfonts.OpenSansItallicTextView
        android:layout_width="wrap_content"
        android:clickable="true"
        android:id="@+id/logoutAppTv"
        android:background="@drawable/terms_condition_and_privacy_selector"
        android:padding="@dimen/_3sdp"
        android:textColor="@color/white"
        android:text="@string/txt_logout"
        android:textSize="@dimen/_10sdp"
        android:layout_height="wrap_content" />




</LinearLayout>

</RelativeLayout>



