<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <com.gdc.isfacademy.view.customs.customfonts.OpenSansSemiBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/txt_enter_student_id"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

    <com.gdc.isfacademy.view.customs.customfonts.OpenSansLightEditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_3sdp"
        android:text=""
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <com.gdc.isfacademy.view.customs.customfonts.OpenSansSemiBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/txt_enter_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

    <com.gdc.isfacademy.view.customs.customfonts.OpenSansLightEditText
        android:id="@+id/passET"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_3sdp"
        android:text=""
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout

        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_3sdp"
        android:paddingTop="@dimen/_3sdp">

        <TextView
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/_25sdp"
            android:id="@+id/okBT"
            android:textSize="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/txt_login"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:id="@+id/cancelBT"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:text="@string/txt_cancel_btn"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</LinearLayout>