<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sendFriendRequestLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transparent"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <com.gdc.isfacademy.view.customs.customfonts.OpenSansRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:text="@string/txt_send_friend_req"
            android:textColor="@color/light_text_color"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:elevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp">

                    <ImageView
                        android:id="@+id/userIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:src="@drawable/profile_inactive"
                        android:tint="@color/color_text_and_spinner"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                    <com.gdc.isfacademy.view.customs.customfonts.OpenSansItallicEditText
                        android:layout_width="match_parent"
                        android:id="@+id/emailAddressEt"
                        app:theme="@style/EditTextTheme"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:background="@android:color/transparent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textColorHint="@color/light_text_color"
                        android:layout_toRightOf="@+id/userIv"
                        android:hint="@string/txt_email_addrress"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        tools:ignore="RtlHardcoded" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:elevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp">

                <ScrollView
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingTop="@dimen/_5sdp">

                        <com.gdc.isfacademy.view.customs.customfonts.OpenSansItallicEditText
                            android:layout_width="match_parent"
                            android:id="@+id/bodyEmailEt"
                            android:background="@android:color/transparent"
                            android:layout_height="wrap_content"
                            app:theme="@style/EditTextTheme"
                            android:imeOptions="actionSend"
                            android:textColorHint="@color/light_text_color"
                            android:hint="@string/txt_hint_email_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            tools:ignore="RtlHardcoded" />



                    </RelativeLayout>


                </ScrollView>


            </android.support.v7.widget.CardView>

        </RelativeLayout>
        <com.gdc.isfacademy.view.customs.customfonts.OpenSansSemiBoldTextView
            android:id="@+id/send_btn_tv"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/_7sdp"
            android:gravity="center"
            android:text="@string/txt_Send_btn"
            android:paddingBottom="@dimen/_7sdp"
            android:background="@drawable/selector_friend_accept"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            />
        <com.gdc.isfacademy.view.customs.customfonts.OpenSansItallicTextView
            android:layout_width="match_parent"
            android:id="@+id/extraText"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            app:theme="@style/EditTextTheme"
            android:imeOptions="actionSend"
            android:textColorHint="@color/light_text_color"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:textColor="@android:color/transparent"
            android:textSize="@dimen/_12sdp"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>


</LinearLayout>